# haic_benchmark_suite

./: ...dev_notes.autosave.autosave.autosave.xopp  ..dev_notes.autosave.autosave.xopp  .dev_notes.autosave.xopp  .dockerignore  .env.development  .env.production  .gitignore  .notes_for_chatbot.autosave.xopp  COMPREHENSIVE_TESTING_GUIDE.md  Dockerfile.backend  Dockerfile.dev.frontend  Dockerfile.frontend  Dockerfile.frontend-react  MAKEFILE_GUIDE.md  Makefile  README.md  activate_venv  bench_suite_2024-08-29_001001.sql  cypress.config.js  deploy_backend.sh  deploy_frontend.sh  dev.docker-compose.yml  dev_notes.xopp  dev_requirements.txt  diagram.py  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  docker-compose.yml.old  import_metric_to_db.sql  jest-preset.json  log_register.json  log_upload.json  notes_for_chatbot.xopp  one  package-lock.json  pilot_se_v0_test_dataset.json  requirements.txt  streamlit_app.py  test_backend.sh  (+2 more)
assets/: import_metric_to_db.sql  init_consolidated.sql  init_db_consolidated.sql  smart_ticket.json  smart_ticketing_output.json  st.json  test_bench_alembic_version_2024-09-26_000815.sql  test_bench_metric_groups_2024-09-26_000853  test_bench_metrics_2024-09-26_000900  (+4 more)
haic_sim_mvp/configs/: 01_manuf_env.json  02_ns_healthentia_env.json  04_smart_ticketing_al_env.json  05_smart_cities.json  MANIFEST.in  ct_demo.json  energy_demo.json  energy_sample.csv  general_energy_environment__pilot_se_v0__3agents_v1.yaml  pilot_se_hmi_eval_2d_v0.json  pilot_se_hmi_eval_xr_v0.json  pilot_se_v0.json  pyproject.toml  sample_cases.csv
(+1014 files in other folders)
